--- a/app/src/main/res/anim/rotation.xml
+++ b/app/src/main/res/anim/rotation.xml
@@ -8,7 +8,8 @@
     android:repeatCount="5"
         />
 
-<!-- <alpha xmlns:android = http://schemas.android.com/apk/res/android
+<!-- just playing around with this part...
+    <alpha xmlns:android = http://schemas.android.com/apk/res/android
     android:fromAlpha="0.0"
     android:toAlpha = "1.0"
     android:duration="100" />  -->
